--- a/FM-RL-Unity/Packages/manifest.json
+++ b/FM-RL-Unity/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.github-glitchenzo.nugetforunity": "https://github.com/GlitchEnzo/NuGetForUnity.git?path=/src/NuGetForUnity",
     "com.mas.assets": "file:../../MASUnityAssets",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
@@ -10,8 +11,9 @@
     "com.unity.feature.development": "1.0.2",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.ml-agents": "file:../../ml-agents/com.unity.ml-agents",
+    "com.unity.ml-agents": "2.0.1",
     "com.unity.purchasing": "4.11.0",
+    "com.unity.robotics.urdf-importer": "https://github.com/Unity-Technologies/URDF-Importer.git?path=/com.unity.robotics.urdf-importer#v0.5.2",
     "com.unity.test-framework": "1.3.9",
     "com.unity.timeline": "1.8.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
