--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 torch~=2.2.1 --index-url https://download.pytorch.org/whl/cu121
 -e ./ml-agents/ml-agents-envs
 -e ./ml-agents/ml-agents
+flash_attn==2.5.8
+Pillow==10.3.0
+Requests==2.31.0
 transformers==4.41.2
 accelerate==0.31.0
 bitsandbytes==0.43.1
 pynput==1.7.7
-grpcio
-grpcio-tools
+grpcio-tools==1.48.2
