--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ml-agents"]
 	path = ml-agents
 	url = git@github.com:martkartasev/ml-agents.git
+[submodule "text-generation-webui"]
+	path = text-generation-webui
+	url = git@github.com:oobabooga/text-generation-webui.git
